# beta-DPO

./: .gitignore  pyproject.toml  requirements.txt  running.txt  trainers.py  utils.py
config/model/: llama32-1b.yaml
