[project]
name = "beta-dpo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "beautifulsoup4==4.12.2",
    "datasets==2.15.0",
    "hydra-core==1.3.2",
    "ipykernel==6.23.1",
    "numpy==1.24.3",
    "tensor-parallel==1.2.4",
    "tokenizers==0.13.3",
    "torch==2.0.1",
    "tqdm==4.65.0",
    "transformers==4.29.2",
    "wandb==0.15.3",
]
